--- a/pages/form.html
+++ b/pages/form.html
@@ -4,7 +4,7 @@
 	<title>DSS Assignment|Heart Disease|FORM</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
     <script src="https://kit.fontawesome.com/ce50b37cb7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="../styles/background.css">
     <link rel="stylesheet" type="text/css" href="../styles/formstyle.css">
@@ -37,31 +37,59 @@
       <div class="col col-sm-6 col-md-6 col-lg-4 col-xl-3">
         <form action="">
           <div class="form-group">
+            <label for="age">Age</label>
+            <input type="text" class="form-control" id="age" />
+          </div>          
+          <div class="form-group">
             <label for="sex">Sex</label>
             <select class="form-control" id="sex">
-                      <option>Option 1</option>
-                      <option>Option 2</option>
+                      <option>Man</option>
+                      <option>Woman</option>
                     </select>
           </div>
           <div class="form-group">
-            <input type="text" class="form-control" />
+            <label for="age">Chest</label>
+            <input type="text" class="form-control" id="chest" />
+          </div>          
+          <div class="form-group">
+            <label for="rbp">Resting Blood Pressure</label>
+            <input type="text" class="form-control" id="rbp" />
+          </div>          
+          <div class="form-group">
+            <label for="schol">Serum Cholestoral</label>
+            <input type="text" class="form-control" id="schol" />
           </div>
-          <div class="form-group text-center">
-            <div class="form-check-inline">
-              <label class="form-check-label">
-      <input type="radio" class="form-check-input" name="optradio">Option 1
-    </label>
-            </div>
-            <div class="form-check-inline">
-              <label class="form-check-label">
-      <input type="radio" class="form-check-input" name="optradio">Option 2
-    </label>
-            </div>
-            <div class="form-check-inline">
-              <label class="form-check-label">
-      <input type="radio" class="form-check-input" name="optradio" disabled>Option 3
-    </label>
-            </div>
+          <div class="form-group">
+            <label for="fbs">Fasting Blood Sugar</label>
+            <input type="text" class="form-control" id="fbsl" />
+          </div>
+          <div class="form-group">
+            <label for="rer">Resting Electrocardiographic Results</label>
+            <input type="text" class="form-control" id="rer" />
+          </div>
+          <div class="form-group">
+            <label for="mhra">Maximum Heart Rate Achieved</label>
+            <input type="text" class="form-control" id="mhra" />
+          </div>
+          <div class="form-group">
+            <label for="eia">Excercise Induced Angina</label>
+            <input type="text" class="form-control" id="eia" />
+          </div>
+          <div class="form-group">
+            <label for="oldpeak">Oldpeak</label>
+            <input type="text" class="form-control" id="oldpeak" />
+          </div>
+          <div class="form-group">
+            <label for="slope">Slope</label>
+            <input type="text" class="form-control" id="slope" />
+          </div>
+          <div class="form-group">
+            <label for="nomv">Number Of Major Vessels</label>
+            <input type="text" class="form-control" id="nomv" />
+          </div>
+          <div class="form-group">
+            <label for="thal">Thal</label>
+            <input type="text" class="form-control" id="thal" />
           </div>
           <div class="form-group">
             <div class="container">
