--- a/pages/form.html
+++ b/pages/form.html
@@ -28,13 +28,13 @@
 
 
 
-  <div class="container-fluid h-100 text-dark pt-5">
-    <div class="row justify-content-center align-items-center">
+  <div class="container-fluid h-100 text-dark pt-5 " id="form">
+    <div class="row justify-content-center align-items-center ">
       <h1>Form</h1>    
     </div>
     <hr/>
     <div class="row justify-content-center align-items-center h-100">
-      <div class="col col-sm-6 col-md-6 col-lg-4 col-xl-3">
+      <div class="col col-sm-6 col-md-6 col-lg-5 col-xl-5 border border-dark rounded bg-dark">
         <form action="">
           <div class="form-group">
             <label for="age">Age</label>
