--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>DSS Assignment|Heart Disease</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+  <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
   <script src="https://kit.fontawesome.com/ce50b37cb7.js" crossorigin="anonymous"></script>
 
   <link rel="stylesheet" type="text/css" href="styles/app.css">
@@ -25,21 +25,22 @@
   </nav>
 
  <div class="container">
- 	<div class="row">
+ 	<div class="row pb-5">
  		<div class="col-lg-12">
  			<div class="content">
  				<h1>DSS Assignment | Heart Disease</h1>
  				<h3>This is a web application that tries to predict heart disease. Press the button below to get started!</h3>
  				<hr>
-         <button onclick="window.location.href='pages/form.html'" type="button" class="btn btn-dark btn-secondary btn-lg"><i class="fas fa-heartbeat"></i>  Get Started</button>
-        </div>
- 		</div>
- 	</div>
+         <button onclick="window.location.href='pages/form.html'" type="button" class="btn btn-dark btn-secondary btn-l"><i class="fas fa-heartbeat"></i>  Get Started</button>
+      </div>
+    </div>
+
+  </div>
+       <!-- FOOTER -->
+       <footer class="container d-none d-md-block" id="footer">
+        <p>&copy; Dimitris Misailidis &middot; Privacy &middot; Terms</p>
+      </footer>
  </div>
-
-
-
-
  
  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
