--- a/pages/form.html
+++ b/pages/form.html
@@ -22,17 +22,15 @@
       </div>
     </div>
   </nav>
-  <div class="container-fluid pt-5 pb-1  text-center bg-dark">
-    <p class="text-white">Please enter your medical data and press submit.</p>
-  </div>
-
-
-
-  <div class="container-fluid h-100 text-dark pt-5 " id="form">
-    <div class="row justify-content-center align-items-center ">
-      <h1>Form</h1>    
+  <div class="jumbotron jumbotron-fluid pb-2">
+    <div class="container">
+      <h1 class="display-4">Heart Disease Form</h1>
+      <p class="lead">Please fill the form below with your medical data. No data will be kept.</p>
     </div>
-    <hr/>
+
+  </div> 
+  <hr>
+  <div class="container-fluid h-100 text-dark pt-0 " id="form">
     <div class="row justify-content-center align-items-center h-100">
       <div class="col col-sm-6 col-md-6 col-lg-5 col-xl-5 border border-dark rounded bg-dark">
         <form action="">
@@ -41,7 +39,7 @@
             <input type="text" class="form-control" id="age" />
           </div>          
           <div class="form-group">
-            <label for="sex">Sex</label>
+            <label for="sex">Gender</i></label>
             <select class="form-control" id="sex">
                       <option>Man</option>
                       <option>Woman</option>
@@ -105,7 +103,11 @@
     </div>
   </div>
 
-
+      <!-- FOOTER -->
+      <footer class="container pt-5">
+        <p class="float-right"><a href="#">Back to top</a></p>
+        <p>&copy; Dimitris Misailidis &middot; Privacy &middot; Terms</p>
+      </footer>
 
 
 
