--- a/pages/form.html
+++ b/pages/form.html
@@ -67,7 +67,7 @@
 
           <div class="form-group">
             <label for="age">Chest</label>
-            <input type="text" class="form-control" id="chest" placeholder="chest value" required/>
+            <input type="text" class="form-control" id="chest" placeholder="chest value" pattern="^\d{0,3}$" required/>
             <div class="valid-feedback">
               Looks good!
             </div>
@@ -78,7 +78,7 @@
           
           <div class="form-group">
             <label for="rbp">Resting Blood Pressure</label>
-            <input type="text" class="form-control" id="rbp" placeholder="resting blood pressure" required/>
+            <input type="text" class="form-control" id="rbp" placeholder="resting blood pressure" pattern="^\d{0,3}$" required/>
             <div class="valid-feedback">
               Looks good!
             </div>
@@ -89,7 +89,7 @@
 
           <div class="form-group">
             <label for="schol">Serum Cholestoral</label>
-            <input type="text" class="form-control" id="schol" pattern="^\d{4}$" placeholder="serum cholestolar" required/>
+            <input type="text" class="form-control" id="schol" pattern="^\d{0,4}$" placeholder="serum cholestolar" required/>
                         <div class="valid-feedback">
               Looks good!
             </div>
@@ -100,7 +100,7 @@
 
           <div class="form-group">
             <label for="fbs">Fasting Blood Sugar</label>
-            <input type="text" class="form-control" id="fbsl" pattern="^\d{2}$" placeholder="fasting blood sugar" required/>
+            <input type="text" class="form-control" id="fbsl" pattern="^\d{0,2}$" placeholder="fasting blood sugar" required/>
                         <div class="valid-feedback">
               Looks good!
             </div>
@@ -111,7 +111,7 @@
 
           <div class="form-group">
             <label for="rer">Resting Electrocardiographic Results</label>
-            <input type="text" class="form-control" id="rer" pattern="^\d{2}$" placeholder="resting electrocardiographic results" required/>
+            <input type="text" class="form-control" id="rer" pattern="^\d{0,2}$" placeholder="resting electrocardiographic results" required/>
                         <div class="valid-feedback">
               Looks good!
             </div>
@@ -122,7 +122,7 @@
 
           <div class="form-group">
             <label for="mhra">Maximum Heart Rate Achieved</label>
-            <input type="text" class="form-control" id="mhra" pattern="^\d{4}$" placeholder="max heart rate achieved" required/>
+            <input type="text" class="form-control" id="mhra" pattern="^\d{0,4}$" placeholder="max heart rate achieved" required/>
                         <div class="valid-feedback">
               Looks good!
             </div>
@@ -133,7 +133,7 @@
 
           <div class="form-group">
             <label for="eia">Excercise Induced Angina</label>
-            <input type="text" class="form-control" id="eia" pattern="^\d{2}$" placeholder="excercise induced angina" required/>
+            <input type="text" class="form-control" id="eia" pattern="^\d{0,2}$" placeholder="excercise induced angina" required/>
             <div class="valid-feedback">
               Looks good!
             </div>
@@ -144,7 +144,7 @@
 
           <div class="form-group">
             <label for="oldpeak">Oldpeak</label>
-            <input type="text" class="form-control" id="oldpeak" pattern="^\d{2}$" placeholder="oldpeak" required/>
+            <input type="text" class="form-control" id="oldpeak" pattern="^\d{0,2}$" placeholder="oldpeak" required/>
                         <div class="valid-feedback">
               Looks good!
             </div>
@@ -155,7 +155,7 @@
 
           <div class="form-group">
             <label for="slope">Slope</label>
-            <input type="text" class="form-control" id="slope" pattern="^\d{2}$" placeholder="slope" required/>
+            <input type="text" class="form-control" id="slope" pattern="^\d{0,2}$" placeholder="slope" required/>
                         <div class="valid-feedback">
               Looks good!
             </div>
@@ -166,7 +166,7 @@
 
           <div class="form-group">
             <label for="nomv">Number Of Major Vessels</label>
-            <input type="text" class="form-control" id="nomv" pattern="^\d{2}$" placeholder="number of major vessels" required/>
+            <input type="text" class="form-control" id="nomv" pattern="^\d{0,2}$" placeholder="number of major vessels" required/>
             <div class="valid-feedback">
               Looks good!
             </div>
@@ -177,7 +177,7 @@
 
           <div class="form-group">
             <label for="thal">Thal</label>
-            <input type="text" class="form-control" id="thal" pattern="^\d{2}$" placeholder="thal" required/>
+            <input type="text" class="form-control" id="thal" pattern="^\d{0,2}$" placeholder="thal" required/>
                         <div class="valid-feedback">
               Looks good!
             </div>
