--- a/pages/form.html
+++ b/pages/form.html
@@ -52,16 +52,16 @@
 
           <div class="form-group">
             <label for="sex">Gender</i></label>
-            <select class="form-control text-center" id="sex" required>
-                      <option hidden disabled selected>Select your option</option>
-                      <option>Man</option>
-                      <option>Woman</option>
+            <select class="form-control text-center" id="sex" required="required">
+                      <option value="" hidden disabled selected >Select your option</option>
+                      <option value="man">Man</option>
+                      <option value="woman">Woman</option>
             </select>
             <div class="valid-feedback">
               Looks good!
             </div>
             <div class="invalid-feedback">
-              Please provide a valid age! >1
+              Please select your gender!
             </div>
           </div>
 
