--- a/pages/form.html
+++ b/pages/form.html
@@ -192,7 +192,7 @@
           <div class="form-group">
             <div class="container">
               <div class="row">
-                <div class="col"><button class="col-6 btn btn-secondary btn-sm float-left">Reset</button></div>
+                <div class="col"><button class="col-6 btn btn-secondary btn-sm float-left" onClick="window.location.reload();">Reset</button></div>
                 <div class="col"><button class="col-6 btn btn-primary btn-sm float-right">Submit</button></div>
               </div>
             </div>
