--- a/pages/form.html
+++ b/pages/form.html
@@ -40,7 +40,7 @@
           
           <div class="form-group">
             <label for="age">Age</label>
-            <input type="text"  class="form-control" pattern="[1]{1}[0-9]{0,2}" placeholder="your age" id="age" required/>
+            <input type="text"  class="form-control" pattern="^\d{0,3}$" placeholder="your age" id="age" required/>
             <div class="valid-feedback">
               Looks good!
             </div>
