--- a/pages/form.html
+++ b/pages/form.html
@@ -215,8 +215,12 @@
 
       <!-- FOOTER -->
       <footer class="container pt-5">
-        <p class="float-right"><a href="#">Back to top</a></p>
-        <p>&copy; Dimitris Misailidis &middot; Privacy &middot; Terms</p>
+        
+        <div class="float-right">
+          <button title="button title" class="btn btn-dark" onclick=" window.open('https://github.com/dmisa/heart_disease_dss', '_blank'); return false;"><i class="fab fa-github"></i> Go to my github repo!</button>
+        </div>
+        <p><a class="btn btn-dark"  href="#">Back to top</a></p>
+        <p class="float-left">&copy; Dimitris Misailidis &middot; Privacy &middot; Terms</p>
       </footer>
 
 
