--- a/index.html
+++ b/index.html
@@ -37,12 +37,19 @@
       </div>
     </div>
 
+
+
+
+
+
+ <div id="footer" class="container-fluid footer">
+  <div class="spacer"></div>
+  <div class="container d-flex justify-content-between py-4">
+      <p>&copy; Dimitris Misailidis &middot; Privacy &middot; Terms</p>
+      <button title="button title" class="btn btn-dark" onclick=" window.open('https://github.com/dmisa/heart_disease_dss', '_blank'); return false;"><i class="fab fa-github"></i> Go to my github repo!</button>
   </div>
-       <!-- FOOTER -->
-       <footer class="container d-none d-md-block" id="footer">
-        <p>&copy; Dimitris Misailidis &middot; Privacy &middot; Terms</p>
-      </footer>
- </div>
+  <div class="spacer"></div>
+</div>
  
  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
