--- a/pages/form.html
+++ b/pages/form.html
@@ -216,10 +216,10 @@
       <!-- FOOTER -->
       <footer class="container pt-5">
         
-        <div class="float-right">
+        <div class="float-right footer">
           <button title="button title" class="btn btn-dark" onclick=" window.open('https://github.com/dmisa/heart_disease_dss', '_blank'); return false;"><i class="fab fa-github"></i> Go to my github repo!</button>
         </div>
-        <p><a class="btn btn-dark"  href="#">Back to top</a></p>
+        <p><a class="btn btn-dark footer"  href="#">Back to top</a></p>
         <p class="float-left">&copy; Dimitris Misailidis &middot; Privacy &middot; Terms</p>
       </footer>
 
