--- a/pages/form.html
+++ b/pages/form.html
@@ -201,7 +201,7 @@
 
           <div class="form-group">
             <div class="container">
-              <div class="row d-flex justify-content-between align-items-start">
+              <div class="row justify-content-between align-items-start">
                 <button class="btn btn-secondary btn-lg" onClick="window.location.reload();">Reset</button>
                 <button class="btn btn-primary btn-lg">Submit</button>
               </div>
