--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
  				<h1 class="titlos">DSS Assignment | Heart Disease</h1>
  				<h3>This is a web application that tries to predict heart disease. Press the button below to get started!</h3>
  				<hr>
-         <button onclick="window.location.href='pages/form.html'" type="button" class="btn btn-dark btn-secondary btn-l"><i class="fas fa-heartbeat"></i>  Get Started</button>
+         <button onclick="window.location.href='pages/form.html'" type="button" class="btn btn-dark btn-secondary btn-lg"><i class="fas fa-heartbeat"></i>  Get Started</button>
       </div>
     </div>
 
