--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
  <div id="footer" class="container-fluid footer">
   <div class="spacer"></div>
   <div class="container d-flex justify-content-between py-4">
-      <p>&copy; Dimitris Misailidis &middot; Privacy &middot; Terms</p>
+      <p>&copy; Dimitris Misailidis, Chris Kotrotsios &middot; Privacy &middot; Terms</p>
       <button title="button title" class="btn btn-dark" onclick=" window.open('https://github.com/dmisa/heart_disease_dss', '_blank'); return false;"><i class="fab fa-github"></i> Go to my github repo!</button>
   </div>
   <div class="spacer"></div>
